include/flowi/path/path.h

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

#pragma once

#include <flowi/fl_api.h>
#include <stdbool.h>
#include <flowi/core/string.h>
#include <flowi/arena/arena.h>

#ifdef __cplusplus
extern "C" {
#endif

// The `fl_path_*` plugin service API - flowi core's cross-platform path manipulation, exported as plain C symbols. Paths are UTF-8 FlStrings using forward slashes as the canonical separator;
// backslashes are folded to forward slashes on normalization. Every slot that builds a new path
// allocates it from the caller's arena, so nothing here needs freeing; the extraction slots that
// return a view into their input (path_get_extension, path_get_filename) take no arena. Plugins link the shared library and call these symbols directly.
//
// Core's path surface is wider than this (segment splitting, PathComponents, current-directory and
// directory-search helpers); those stay internal - they are VFS resolution machinery, not something a
// plugin manipulating file names needs.
// Direct API - hand-written bodies.
// Fold backslashes to forward slashes and collapse duplicate separators.
FL_API FlString path_normalize(FlArena* arena, FlString path);
// Normalize, then resolve "." and ".." components.
FL_API FlString path_normalize_full(FlArena* arena, FlString path);
// Convert a path to forward slashes only.
FL_API FlString path_to_forward_slashes(FlArena* arena, FlString path);
// Join relative onto base, handling trailing separators. An absolute relative wins outright.
FL_API FlString path_join(FlArena* arena, FlString base, FlString relative);
// The file extension without its leading dot, as a view into path (empty if there is none).
FL_API FlString path_get_extension(FlString path);
// The filename component after the last separator, as a view into path (empty if path ends in
// a separator).
FL_API FlString path_get_filename(FlString path);
// The directory component: everything before the last separator.
FL_API FlString path_get_directory(FlArena* arena, FlString path);
// The basename: the filename without its extension.
FL_API FlString path_get_basename(FlArena* arena, FlString path);
// The parent directory, or an empty string if path has none.
FL_API FlString path_get_parent(FlArena* arena, FlString path);
// Whether path is absolute (Unix: leading "/"; Windows: a drive letter or a UNC prefix).
FL_API bool path_is_absolute(FlString path);
// Whether path is relative - the complement of path_is_absolute.
FL_API bool path_is_relative(FlString path);
// Whether path ends in extension (given without its dot, e.g. "zip"), ignoring ASCII case.
FL_API bool path_has_extension(FlString path, FlString extension);
// Whether path contains any directory separator.
FL_API bool path_has_separator(FlString path);
// Whether two paths are equivalent once normalized.
FL_API bool path_equals(FlString path1, FlString path2);
// Resolve path against base; an already-absolute path is copied through unchanged.
FL_API FlString path_make_absolute(FlArena* arena, FlString base, FlString path);
// Drop the trailing separator, if path has one.
FL_API FlString path_remove_trailing_separator(FlArena* arena, FlString path);
// Add a trailing separator, if path lacks one (marking it as a directory).
FL_API FlString path_ensure_trailing_separator(FlArena* arena, FlString path);


#ifdef __cplusplus
}
#endif