rust/flowi_core_sys/src/generated/path.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

// The `fl_path_*` plugin service API - flowi core's cross-platform path manipulation, exported as plain C symbols. Paths are UTF-8 FlStrings using forward slashes as the canonical separator;
// backslashes are folded to forward slashes on normalization. Every slot that builds a new path
// allocates it from the caller's arena, so nothing here needs freeing; the extraction slots that
// return a view into their input (path_get_extension, path_get_filename) take no arena. Plugins link the shared library and call these symbols directly.
//
// Core's path surface is wider than this (segment splitting, PathComponents, current-directory and
// directory-search helpers); those stay internal - they are VFS resolution machinery, not something a
// plugin manipulating file names needs.
extern "C" {
    /// Fold backslashes to forward slashes and collapse duplicate separators.
    pub fn path_normalize(arena: *mut crate::Arena, path: crate::RawStr) -> crate::RawStr;
    /// Normalize, then resolve "." and ".." components.
    pub fn path_normalize_full(arena: *mut crate::Arena, path: crate::RawStr) -> crate::RawStr;
    /// Convert a path to forward slashes only.
    pub fn path_to_forward_slashes(arena: *mut crate::Arena, path: crate::RawStr) -> crate::RawStr;
    /// Join relative onto base, handling trailing separators. An absolute relative wins outright.
    pub fn path_join(arena: *mut crate::Arena, base: crate::RawStr, relative: crate::RawStr) -> crate::RawStr;
    /// The file extension without its leading dot, as a view into path (empty if there is none).
    pub fn path_get_extension(path: crate::RawStr) -> crate::RawStr;
    /// The filename component after the last separator, as a view into path (empty if path ends in
    /// a separator).
    pub fn path_get_filename(path: crate::RawStr) -> crate::RawStr;
    /// The directory component: everything before the last separator.
    pub fn path_get_directory(arena: *mut crate::Arena, path: crate::RawStr) -> crate::RawStr;
    /// The basename: the filename without its extension.
    pub fn path_get_basename(arena: *mut crate::Arena, path: crate::RawStr) -> crate::RawStr;
    /// The parent directory, or an empty string if path has none.
    pub fn path_get_parent(arena: *mut crate::Arena, path: crate::RawStr) -> crate::RawStr;
    /// Whether path is absolute (Unix: leading "/"; Windows: a drive letter or a UNC prefix).
    pub fn path_is_absolute(path: crate::RawStr) -> bool;
    /// Whether path is relative - the complement of path_is_absolute.
    pub fn path_is_relative(path: crate::RawStr) -> bool;
    /// Whether path ends in extension (given without its dot, e.g. "zip"), ignoring ASCII case.
    pub fn path_has_extension(path: crate::RawStr, extension: crate::RawStr) -> bool;
    /// Whether path contains any directory separator.
    pub fn path_has_separator(path: crate::RawStr) -> bool;
    /// Whether two paths are equivalent once normalized.
    pub fn path_equals(path1: crate::RawStr, path2: crate::RawStr) -> bool;
    /// Resolve path against base; an already-absolute path is copied through unchanged.
    pub fn path_make_absolute(arena: *mut crate::Arena, base: crate::RawStr, path: crate::RawStr) -> crate::RawStr;
    /// Drop the trailing separator, if path has one.
    pub fn path_remove_trailing_separator(arena: *mut crate::Arena, path: crate::RawStr) -> crate::RawStr;
    /// Add a trailing separator, if path lacks one (marking it as a directory).
    pub fn path_ensure_trailing_separator(arena: *mut crate::Arena, path: crate::RawStr) -> crate::RawStr;
}

